# pylo2

./: CHANGELOG  CMakeLists.txt  INSTALL.md  LICENCE  README.md  requirements.txt  setup.py
pylo/: binding_gprolog.cpp
pylo/engines/: GnuProlog.py  SWIProlog.py  XSBProlog.py  __init__.py  language.py
src/: binding_gprolog.cpp  binding_swipl.cpp  language.h
src/pylo/: GnuProlog.py  Prolog.py  SWIProlog.py  XSBProlog.py  __init__.py  binding_swipl.cpp  binding_xsbprolog.cpp  binding_yap.cpp  language.cpp  language.py
src/pylo/engines/: GnuProlog.py  Prolog.py  SWIProlog.py  XSBProlog.py  __init__.py  language.py  lpsolver.py
src/pylo/engines/datalog/: __init__.py  datalogsolver.py  muz.py
src/pylo/engines/kanren/: __init__.py  minikanren.py  relationalsolver.py
src/pylo/engines/prolog/: GnuProlog.py  SWIProlog.py  XSBProlog.py  __init__.py  prologsolver.py
src/pylo/language/: __init__.py  commons.py  string_check_utils.py  utils.py
src/pylo/language/datalog/: __init__.py
src/pylo/language/kanren/: __init__.py  kanren_utils.py
src/pylo/language/lp/: __init__.py  lp.py
src/pylo/tests/: __init__.py  test_datalog.py  test_gnuprolog.py  test_kanren.py  test_language.py  test_retractall.py  test_swipy.py  test_xsb.py
testpy/: test_gprolog.py  test_swipy.py  test_xsb.py
